--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,5 @@
 [build]
-  command = "node index.js"  # Your build command here, if applicable
-  publish = "public"  # Directory where your static files are located
+  functions = "server"
 
-[functions]
-  directory = ""  # Directory for serverless functions
-
-[context.production.environment]
-  NODE_VERSION = "14"  # Specify the Node.js version if needed
+[build.environment]
+  NODE_VERSION = "18"  # Specify your Node.js version
