--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,9 @@
 [build]
-  functions = "server"
-  command = "npm start"  # Or "yarn build"
-  publish = "public"
+  functions = ""
+  publish = "public/index"
+
+[dev]
+functions = "server"
 
 [build.environment]
   NODE_VERSION = "18"  # Specify your Node.js version
